--- a/index.html
+++ b/index.html
@@ -1,104 +1,1 @@
-<!doctype html>
-<html lang="ru">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1">
-    <meta name="description" content="Страница, где можно общаться с помощью карточек">
-    <meta property="og:title" content="Хех, привет">
-    <meta property="og:url" content="https://ryan-gosling.com/">
-    <meta property="og:image" content="">
-    <meta property="twitter:card" content="summary_large_image">
-    <link rel="icon" href="014eebedfdcfb9dd4001.svg" type="image/svg+xml">
-    <title>Mesto classes</title>
-    <script defer="defer" src="main.55d363bd30b73c6f58c6.js"></script>
-    <link href="main.css" rel="stylesheet">
-</head>
-
-<body class="page">
-    <div class="page__container">
-        <header class="header"><a href="#"><img class="header__logo" src="bc3450ffaa676172ae9a.svg"
-                    alt="Логотип Mesto Russia" /></a></header>
-        <main class="content">
-            <section class="profile"><button class="profile__avatar-edit" type="button" title="Обновить аватар"><img
-                        class="profile__avatar" src="#" alt="Аватар профиля" /></button>
-                <div class="profile__info">
-                    <h1 class="profile__name"></h1><button class="profile__edit-button" type="button"
-                        title="Редактировать профиль"></button>
-                    <p class="profile__job"></p>
-                </div><button class="profile__add-button" type="button" title="Добавить новую фотографию"></button>
-            </section>
-            <section class="elements">
-                <div class="elements__list"></div>
-            </section>
-        </main>
-        <footer class="footer">
-            <p class="footer__copyright">&copy; 2022 Mesto Russia</p>
-        </footer>
-    </div>
-    <div class="popup popup_form_avatar">
-        <div class="popup__container">
-            <form class="popup__form" name="profile-form" novalidate>
-                <h2 class="popup__title">Обновить аватар</h2>
-                <div class="popup__input-container"><input class="popup__input" id="avatar" type="url" name="avatar"
-                        value="" placeholder="Ссылка на аватар" required /> <span class="popup__input-error"
-                        id="avatar-error"></span></div><button class="popup__save-button" type="submit"
-                    title="Сохранить">Сохранить</button>
-            </form><button class="popup__close-button" type="button" title="Закрыть"></button>
-        </div>
-    </div>
-    <div class="popup popup_form_edit">
-        <div class="popup__container">
-            <form class="popup__form popup__form_profile" name="profile-form" novalidate>
-                <h2 class="popup__title">Редактировать профиль</h2>
-                <div class="popup__input-container"><input class="popup__input" name="name" autofocus id="nameInput"
-                        placeholder="Имя" minlength="2" maxlength="40" required /> <span class="popup__input-error"
-                        id="nameInput-error"></span></div>
-                <div class="popup__input-container"><input class="popup__input" name="about" id="jobInput"
-                        placeholder="Профессия" minlength="2" maxlength="200" required /> <span
-                        class="popup__input-error" id="jobInput-error"></span></div><button class="popup__save-button"
-                    type="submit" title="Сохранить">Сохранить</button>
-            </form><button class="popup__close-button" type="button" title="Закрыть"></button>
-        </div>
-    </div>
-    <div class="popup popup_type_add-card">
-        <div class="popup__container">
-            <form class="popup__form" name="profile-form" novalidate>
-                <h2 class="popup__title">Новое место</h2>
-                <div class="popup__input-container"><input class="popup__input" id="name" name="name" autofocus value=""
-                        placeholder="Название" minlength="2" maxlength="30" required /> <span class="popup__input-error"
-                        id="name-error"></span></div>
-                <div class="popup__input-container"><input class="popup__input" id="link" type="url" name="link"
-                        value="" placeholder="Ссылка на картинку" required /> <span class="popup__input-error"
-                        id="link-error"></span></div><button class="popup__save-button" type="submit"
-                    title="Создать">Создать</button>
-            </form><button class="popup__close-button" type="button" title="Закрыть"></button>
-        </div>
-    </div>
-    <div class="popup popup_form_confirm">
-        <div class="popup__container">
-            <form class="popup__form" name="profileData" novalidate>
-                <h2 class="popup__title">Вы уверены?</h2><button class="popup__save-button popup__button-confirm"
-                    type="submit" title="Подтвердить">Да</button>
-            </form><button class="popup__close-button" type="button" title="Закрыть"></button>
-        </div>
-    </div>
-    <div class="popup popup_viewer">
-        <div class="popup__content"><img class="popup__image" src="#" alt="" />
-            <h2 class="popup__text"></h2><button class="popup__close-button" type="button" title="Закрыть"></button>
-        </div>
-    </div><template class="template-card">
-        <figure class="element"><img class="element__image" src="#" alt="Картинка" />
-            <figcaption class="element__info">
-                <h2 class="element__name"></h2><button class="element__trash-button" type="button"
-                    title="Удалить"></button>
-                <div class="element__like-container"><button class="element__like-button" type="button"
-                        title="Нравится"></button>
-                    <p class="element__like-count"></p>
-                </div>
-            </figcaption>
-        </figure>
-    </template>
-</body>
-
-</html>
+<!doctype html><html lang="ru"><head><meta charset="utf-8"><meta name="viewport" content="width=device-width,initial-scale=1"><meta name="description" content="Страница, где можно общаться с помощью карточек"><meta property="og:title" content="Хех, привет"><meta property="og:url" content="https://ryan-gosling.com/"><meta property="og:image" content=""><meta property="twitter:card" content="summary_large_image"><link rel="icon" href="ecdb47786d15868b0494.svg" type="image/svg+xml"><title>Mesto classes</title><script defer="defer" src="main.55d363bd30b73c6f58c6.js"></script><link href="main.css" rel="stylesheet"></head><body class="page"><div class="page__container"><header class="header"><a href="#"><img class="header__logo" src="bc3450ffaa676172ae9a.svg" alt="Логотип Mesto Russia"/></a></header><main class="content"><section class="profile"><button class="profile__avatar-edit" type="button" title="Обновить аватар"><img class="profile__avatar" src="#" alt="Аватар профиля"/></button><div class="profile__info"><h1 class="profile__name"></h1><button class="profile__edit-button" type="button" title="Редактировать профиль"></button><p class="profile__job"></p></div><button class="profile__add-button" type="button" title="Добавить новую фотографию"></button></section><section class="elements"><div class="elements__list"></div></section></main><footer class="footer"><p class="footer__copyright">&copy; 2022 Mesto Russia</p></footer></div><div class="popup popup_form_avatar"><div class="popup__container"><form class="popup__form" name="profile-form" novalidate><h2 class="popup__title">Обновить аватар</h2><div class="popup__input-container"><input class="popup__input" id="avatar" type="url" name="avatar" value="" placeholder="Ссылка на аватар" required/> <span class="popup__input-error" id="avatar-error"></span></div><button class="popup__save-button" type="submit" title="Сохранить">Сохранить</button></form><button class="popup__close-button" type="button" title="Закрыть"></button></div></div><div class="popup popup_form_edit"><div class="popup__container"><form class="popup__form popup__form_profile" name="profile-form" novalidate><h2 class="popup__title">Редактировать профиль</h2><div class="popup__input-container"><input class="popup__input" name="name" autofocus id="nameInput" placeholder="Имя" minlength="2" maxlength="40" required/> <span class="popup__input-error" id="nameInput-error"></span></div><div class="popup__input-container"><input class="popup__input" name="about" id="jobInput" placeholder="Профессия" minlength="2" maxlength="200" required/> <span class="popup__input-error" id="jobInput-error"></span></div><button class="popup__save-button" type="submit" title="Сохранить">Сохранить</button></form><button class="popup__close-button" type="button" title="Закрыть"></button></div></div><div class="popup popup_type_add-card"><div class="popup__container"><form class="popup__form" name="profile-form" novalidate><h2 class="popup__title">Новое место</h2><div class="popup__input-container"><input class="popup__input" id="name" name="name" autofocus value="" placeholder="Название" minlength="2" maxlength="30" required/> <span class="popup__input-error" id="name-error"></span></div><div class="popup__input-container"><input class="popup__input" id="link" type="url" name="link" value="" placeholder="Ссылка на картинку" required/> <span class="popup__input-error" id="link-error"></span></div><button class="popup__save-button" type="submit" title="Создать">Создать</button></form><button class="popup__close-button" type="button" title="Закрыть"></button></div></div><div class="popup popup_form_confirm"><div class="popup__container"><form class="popup__form" name="profileData" novalidate><h2 class="popup__title">Вы уверены?</h2><button class="popup__save-button popup__button-confirm" type="submit" title="Подтвердить">Да</button></form><button class="popup__close-button" type="button" title="Закрыть"></button></div></div><div class="popup popup_viewer"><div class="popup__content"><img class="popup__image" src="#" alt=""/><h2 class="popup__text"></h2><button class="popup__close-button" type="button" title="Закрыть"></button></div></div><template class="template-card"><figure class="element"><img class="element__image" src="#" alt="Картинка"/><figcaption class="element__info"><h2 class="element__name"></h2><button class="element__trash-button" type="button" title="Удалить"></button><div class="element__like-container"><button class="element__like-button" type="button" title="Нравится"></button><p class="element__like-count"></p></div></figcaption></figure></template></body></html>
